RESOLVED FIXED288201
[iOS] Unable to focus phone number field in Takeout/Ele.me (饿了么) Alipay mini program when adding a new delivery address
https://bugs.webkit.org/show_bug.cgi?id=288201
Summary [iOS] Unable to focus phone number field in Takeout/Ele.me (饿了么) Alipay mini ...
Wenson Hsieh
Reported 2025-02-21 09:33:57 PST
Attachments
Wenson Hsieh
Comment 1 2025-02-21 10:12:01 PST
EWS
Comment 2 2025-02-21 12:41:09 PST
Committed 290818@main (7eae9413cc52): <https://commits.webkit.org/290818@main> Reviewed commits have been landed. Closing PR #41065 and removing active labels.
EWS
Comment 3 2025-02-24 10:24:31 PST
Committed 289651.158@safari-7621-branch (013fc13f3db3): <https://commits.webkit.org/289651.158@safari-7621-branch> Reviewed commits have been landed. Closing PR #2656 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.